# Hemsida

./: .gitignore  Cargo.toml
assets/: mall.html
assets/protokoll/2024/02/: 2024 02 23.html
assets/static/: index.html  load.js  main.css  navbar.html  siri.asc  stadgar.html  styrelsen.html  svante.asc
assets/static/dokument/: index.html
assets/static/medlem/: index.html
assets/static/medlemskap/: index.html
assets/static/protokoll/: index.html
assets/static/protokoll_raw/2024/02/: 2024-02-23.html
assets/static/protokoll_raw/2024/03/: 2024-03-08.html  2024-03-22.html
assets/static/protokoll_raw/2024/04/: 2024-04-26.html
assets/static/protokoll_raw/2024/05/: 2024-05-24.html  2024-05-31.html
assets/static/stadgar/: index.html
assets/static/styrelsen/: index.html
assets/static/verksamhetsplan/: index.html
src/: endpoints.rs  lib.rs  main.rs
