[package]
name = "ung-data-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
color-eyre = "0.6.2"
env_logger = "0.11.2"
log = "0.4.21"
markdown = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.14"
